--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,7 @@
     <link rel="apple-touch-icon" sizes="180x180" href="assets/img/icon/192x192.png">
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="manifest" href="__manifest.json">
+    <base href="/">
 </head>
 
 <body class="bg-white">
@@ -23,7 +24,7 @@
 
 
 
-  
+
     <!-- ///////////// Js Files ////////////////////  -->
     <!-- Jquery -->
     <script src="assets/js/lib/jquery-3.4.1.min.js"></script>
